--- a/style.css
+++ b/style.css
@@ -38,5 +38,34 @@ ul{
     padding-left: 0;
     gap: 10px;
 }
+.ms-bg-lightgreen .star{
+    color: white
+}
+.ms-bg-lightgreen .star-left::before{
+    border-bottom: 2px solid white;
+}
+.ms-bg-lightgreen .star-right::after{
+    border-top: 2px solid white;
+}
+.star{
+    position: relative;
+    color: #2c3e50;
+}
+.star-left::before{
+    content: '';
+    border-bottom: 2px solid #2c3e50;
+    position: absolute;
+    right: 40px;
+    top: 50%;
+    width: 170px;
+}
+.star-right::after{
+    content: '';
+    border-top: 2px solid #2c3e50;
+    position: absolute;
+    left: 40px;
+    top: 50%;
+    width: 170px;
+}
 /* #endregion General style */
 
