--- a/style.css
+++ b/style.css
@@ -47,12 +47,6 @@ ul{
 .ms-bg-lightgreen .star{
     color: white
 }
-.ms-bg-lightgreen .star-left::before{
-    border-bottom: 2px solid white;
-}
-.ms-bg-lightgreen .star-right::after{
-    border-top: 2px solid white;
-}
 .star{
     position: relative;
     color: #2c3e50;
@@ -65,9 +59,25 @@ ul{
     top: 50%;
     width: 8vw;
 }
+.star-left-white::before{
+    content: '';
+    border-bottom: 2px solid white;
+    position: absolute;
+    right: 40px;
+    top: 50%;
+    width: 8vw;
+}
 .star-right::after{
     content: '';
     border-top: 2px solid #2c3e50;
+    position: absolute;
+    left: 40px;
+    top: 50%;
+    width: 8vw;
+}
+.star-right-white::after{
+    content: '';
+    border-bottom: 2px solid white;
     position: absolute;
     left: 40px;
     top: 50%;
