--- a/style.css
+++ b/style.css
@@ -92,6 +92,29 @@ ul{
     top: 50%;
     width: 8vw;
 }
+.anchor{
+    position: relative;
+    overflow: hidden;
+}
+.plus-hover{
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(26, 188, 156, 0.7);
+    font-size: 70px;
+    color: white;
+    display: none;
+}
+.anchor:hover .plus-hover{
+    display: block;
+}
+.plus-hover i{
+    position: relative;
+    top: 50%;  
+    transform: translate(0 , -50%);
+}
 .ms-input input{
     border: none;
     border-radius: 0;
